solve the error of increent and decrement btn.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <button class="btn" onclick="reset()">Reset</button>
 
   <script>
-    let count = ;
+    let count = 0;
     const countElement = document.getElementById('count');
 
     function updateDisplay() {
